styles.css
header {
	background-color: #3A4046;
	text-align: center;
	box-shadow: 0px 1px 5px #6C6C6C;
	padding-bottom: 0px;
}

html {
	position: relative;
    min-height: 100%;	
}

h1 {
	color: #55a7ca;
	font-family: "advent-pro";
	font-style: normal;
	font-weight: bold;
	font-size: 48px;
	margin-top: 0px;
	margin-bottom: 0px;
}

h3 {
	color: #FFFFFF;
	font-family: "advent-pro";
	font-style: normal;
	font-weight: bold;
	font-size: 24px;
	text-decoration: none;
	text-decoration: underline;
	margin-top: 40px;
	margin-bottom: 10px;
}

body {
	background-color: #2E3237;
	margin-left: 0px;
	margin-right: 0px;
}

footer {
	font-family: "advent-pro";
	font-style: normal;
	font-weight: 100;
	text-align: center;
	left: 0px;
	right: 0px;
	bottom: 0px;
	height: 40px;
	position: absolute;
	border-top: #6C6C6C;
	border-top-style: solid;
	border-top-width: 2px;
}

.copyright {
	font-size: 14px;
}

p {
	color: aliceblue;
	font-family: "advent-pro", abel;
	font-style: normal;
	font-weight: 100;
	font-size: 20px;
}

.text {
	color: aliceblue;
	font-family: "advent-pro", abel;
	font-style: normal;
	font-weight: 100;
	font-size: 20px;
}

ul {
	color: aliceblue;
	font-family: "advent-pro", abel;
	font-style: normal;
	font-weight: 100;
	font-size: 20px;
	list-style-type: circle;
}

.margin {
	margin-left: 30px;
	margin-right: 30px;
}

.button {
	color: aliceblue;
	font-family: "advent-pro", abel;
	font-style: normal;
	font-weight: 100;
	font-size: 20px;
	background-color: #454B53;
	border-style: solid;
	border-width: thin;
	border-color: #3A4046;
	width: 300px;
	box-sizing: border-box;
	display: inline-block;
}
.button:hover{
	color: aliceblue;
	font-family: "advent-pro", abel;
	font-style: normal;
	font-weight: bold;
	font-size: 20px;
	background-color: #575F69;
	border-style: solid;
	border-width: thin;
	border-color: #3A4046;
	width: 300px;
	box-sizing: border-box;
}

.spacing {
	margin-bottom: 10px;
}

.canvas {
	border-color: aliceblue;
	border-style: groove;
}

.video {
	margin-bottom:50px;
	display: block;
	max-width: 100%;
	max-height: 100%;
}

div {
	margin-top: 0px;
	margin-left: 0px;
	margin-bottom: 30px;
}

main {
	margin-left: 60px;
	margin-right: 60px;
	margin-top: 60px;
	margin-bottom: 90px;
}

.main-nav ul {
	list-style: none;
	padding: 2px;
	border-style: groove;
	border-color: #2E3237;
	border-width: medium;
}

.main-nav ul li {
	display: inline;
}

.header_heading {
	color: cornflowerblue;
	font-family: "advent-pro";
	font-style: normal;
	font-weight: 100;
	font-size: 32px;
	text-decoration: none;
	background-color: #2E3237;
	border-style: groove;
	border-color: #3A4046;
	border-width: medium;
	border-bottom: 1px;
	margin: 1px 4px 1px 4px;
	padding: 1px 4px 1px 4px;
	white-space: nowrap;
}
.header_heading:hover {
	color: cornflowerblue;
	font-family: "advent-pro";
	font-style: normal;
	font-weight: bold;
	font-size: 32px;
	text-decoration: none;
	background-color: #2E3237;
	border-style: groove;
	border-color: #3A4046;
	border-width: medium;
	border-bottom: 1px;
	margin: 1px 4px 1px 4px;
	padding: 1px 4px 1px 4px;
}

.header_current_heading {
	color: cornflowerblue;
	font-family: "advent-pro";
	font-style: normal;
	font-weight: bold;
	font-size: 40px;
	text-decoration: none;
	background-color: #2E3237;
	border-style: groove;
	border-color: #3A4046;
	border-width: medium;
	border-bottom: 1px;
	margin: 1px 4px 1px 4px;
	padding: 1px 4px 1px 4px;
   	white-space: nowrap;
}

.canvasDiv {
	display: inline-block;
	vertical-align: middle;
	margin-top: 0px;
	margin-left: 20px;
	margin-right:20px;
}

.controlsDiv {
	display: inline-block;
	max-width: 300px;
	vertical-align: middle;
	margin-top: 0px;
	margin-left: 20px;
	margin-right:20px;
}

.smallLink {
	color: cornflowerblue;
	text-decoration: none;
}

.smallLink:hover {
	border-bottom: 1px solid cornflowerblue;
}

.verticalSpacing{
	margin-top: 20px;
	margin-bottom:20px;
}

.inlineLink {
	color: cornflowerblue;
	font-family: "advent-pro";
	font-style: normal;
	font-weight: 100;
	text-decoration: none;
}
.inlineLink:hover{
	border-bottom: 1px solid cornflowerblue;
}

.importantLinks{
	color: cornflowerblue;
	font-family: "advent-pro";
	font-style: normal;
	font-weight: 100;
	font-size: 24px;
	text-decoration: none;
	margin-bottom:5px;
}
.importantLinks:hover{
	border-bottom: 1px solid cornflowerblue;
}

h4 {
	margin-top: 5px;
	margin-bottom: 5px;
}

.image {
	max-width: 100%;
	max-height: 100%;
	width: auto;
	border-style: groove;
	border-color: aliceblue;
}	
.imageSubtitle{
	font-size:14px;
}
.imageDiv{
	margin-bottom: 60px;
}

.textWrap {
    display: inline-block;
    width: 400px;
    margin-left: 20px;
    margin-right: 20px;
    margin-top: 0px;
    margin-bottom: 20px;
    text-align: justify;
    vertical-align: top;
}

